<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_new" android:title="@string/action_new"
        android:orderInCategory="100" android:showAsAction="never" />
    <item android:id="@+id/action_shoppingList" android:title="@string/action_shoppingList"
        android:orderInCategory="100" android:showAsAction="never" />
    <item android:id="@+id/action_timer" android:title="@string/action_timer"
        android:orderInCategory="100" android:showAsAction="never" />
    <item android:id="@+id/action_search" android:title="@string/action_searchByCode"
    android:orderInCategory="100" android:showAsAction="never" />
    <item android:id="@+id/action_dbEANs" android:title="@string/action_dbEANs"
        android:orderInCategory="100" android:showAsAction="never" />
</menu>
